# FL_Blockchain

./: Dockerfile  README.md
fl-blockchain/: README.md  pyproject.toml
fl-blockchain/fl_blockchain/: __init__.py  client_app.py  my_strategy.py  plot_all_in_one.py  plot_all_in_one_results.py  plot_global_results.py  plot_results_json.py  plot_training_results.py  save_plots.py  server_app.py  task.py
fl-blockchain/fl_blockchain/Dataset/: etiquetar.py
fl-blockchain/fl_blockchain/Dataset/tratado/: dataset_etiquetado.csv
fl-blockchain/fl_blockchain/NC_4/: Training_time.txt  results.json
fl-blockchain/fl_blockchain/NC_4/IID/: Training_time.txt  results_client_0_1.json  results_client_0_2.json  results_client_0_3.json  results_client_0_4.json  results_client_0_5.json  results_client_1_1.json  results_client_1_2.json  results_client_1_3.json  results_client_1_4.json  results_client_1_5.json  results_client_2_1.json  results_client_2_2.json  results_client_2_3.json  results_client_2_4.json  results_client_2_5.json  results_client_3_1.json  results_client_3_2.json  results_client_3_3.json  results_client_3_4.json  results_client_3_5.json  results_global.json
fl-blockchain/fl_blockchain/NC_6/: Training_time.txt  results.json
fl-blockchain/fl_blockchain/NC_6/IID/: Training_time.txt  results_client_0_1.json  results_client_0_2.json  results_client_0_3.json  results_client_0_4.json  results_client_0_5.json  results_client_1_1.json  results_client_1_2.json  results_client_1_3.json  results_client_1_4.json  results_client_1_5.json  results_client_2_1.json  results_client_2_2.json  results_client_2_3.json  results_client_2_4.json  results_client_2_5.json  results_client_3_1.json  results_client_3_2.json  (+14 more)
fl-blockchain/fl_blockchain/NC_8/: Training_time.txt  results.json
(+520 files in other folders)
